--- a/ProvaVisual/Prova/Prova.csproj
+++ b/ProvaVisual/Prova/Prova.csproj
@@ -10,4 +10,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Data\" />
+    <Folder Include="Models\" />
+    <Folder Include="Tests\" />
+  </ItemGroup>
+
 </Project>
