--- a/ProvaVisual/Prova/Prova.csproj
+++ b/ProvaVisual/Prova/Prova.csproj
@@ -17,6 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="DTOs\" />
+    <Folder Include="Models\" />
     <Folder Include="Tests\" />
   </ItemGroup>
 
